--- a/WebApplication4/Views/Shared/_Layout.cshtml
+++ b/WebApplication4/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
                 <ul class="nav navbar-nav">                    
                     <li>@Html.ActionLink("Work", "Work", "Work")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
+                    <li>@Html.ActionLink("CV", "CV", "CV")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
 
                 </ul>
