--- a/WebApplication4/Views/Home/Index.cshtml
+++ b/WebApplication4/Views/Home/Index.cshtml
@@ -8,6 +8,7 @@
     <p><a href="" class="btn btn-primary btn-lg">Projects</a></p>
 </div>
 
+<body></body>
 <div class="row">
     <div class="col-md-4">
         <h2>Project 1</h2>
@@ -20,7 +21,7 @@
     </div>
     <div class="col-md-4">
         <h2>Project 2</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
+        <p>NuGet is a <important> free Visual Studio extension</important> that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
